code change and correction

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 </head>
 
 <body>
-        <h1> Welcoem to first dynamic ServiceNow App</h1>
+        <h1> Welcome to first dynamic ServiceNow App</h1>
+        <div>
+            First Name: <input type="text" />
+        </div>
 </body>
 </html>
