--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <head>
     <title> Test Project Title </title>
+
+    <script src="myscript.js"> </script>
 </head>
 
 <body>
@@ -9,5 +11,12 @@
         <div>
             First Name: <input type="text" />
         </div>
+
+        <div id="out">
+
+
+        </div>
+
+        <input type="button" value="Add Content"  onclick="greeting()" />
 </body>
 </html>
